tests/toy/neg/001421_mutation.toylang
program a = { var a : else int; } .
